--- a/README
+++ b/README
@@ -2,3 +2,10 @@
 > Real Time Video Collaboration <
 :::::__ www.retivico.com __:::::
 =================================
+
+Requirements:
+- Flash CS5 to edit .fla document
+
+
+More information:
+www.retivico.com
